# learning_python_C

ex2/: ft_coordinate_system.py
ex3/: ft_achievement_tracker.py
py_00/ex1/: ft_plot_area.py
py_00/ex2/: ft_harvest_total.py
py_00/ex3/: ft_plant_age.py
py_00/ex4/: ft_water_reminder.py
py_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
py_00/ex6/: ft_garden_summary.py
py_00/ex7/: ft_seed_inventory.py
py_01/ex0/: ft_garden_intro.py
py_01/ex1/: ft_garden_data.py
py_01/ex2/: ft_plant_growth.py
py_01/ex3/: ft_plant_factory.py
py_01/ex4/: ft_garden_security.py
py_01/ex5/: ft_plant_types.py
py_01/ex6/: ft_garden_analytics.py
py_02/ex0/: ft_first_exception.py
py_02/ex1/:  ft_different_errors.py
py_02/ex2/: ft_custom_errors.py
py_02/ex3/: ft_finally_block.py
py_02/ex4/: ft_raise_errors.py
py_02/ex5/: ft_garden_management.py
py_03/ex0/: ft_command_quest.py
py_03/ex1/: ft_score_analytics.py
py_03/ex2/: ft_coordinate_system.py
py_03/ex3/: ft_achievement_tracker.py
py_03/ex4/: ft_inventory_system.py
py_03/ex5/: ft_data_stream.py
py_03/ex6/: ft_data_alchemist.py
py_04/: sample_data.json
py_04/data-generator-tools/: sample_data.json
py_04/ex0/:  ft_ancient_text.py  ft_ancient_text.py
py_04/ex1/: ft_archive_creation.py
py_06/: ft_alembic_1.py  ft_alembic_2.py  ft_alembic_4.py  ft_distillation_0.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py
py_07/: battle.py  capacitor.py  tournament.py
py_07/ex2/: battel.py  (+1 more)
py_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+32 files in other folders)
