[project]
name = "ex01"
version = "0.1.0"
description = "this is is atomel file to install all the depnedencies necessire pour run this file on another env"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pandas (>=2.3.3)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
